# reframecam

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: config.py  countries.py  db.py  email.py  main.py  photos.py  seed.py  settings_store.py  storage.py  strings.py  validation.py  views.py
data/: site.toml  stations.toml
static/css/: app.css  tokens.css
static/js/: admin.js  home.js  host.js  locations-map.js  nav.js  reveal.js  upload.js  viewer.js
templates/: base.html  error.html  host.html  landing.html  locations.html  station.html
templates/admin/: _action_confirm_dialog.html  _remove_confirm_dialog.html  layout.html  location_form.html  locations.html  photos.html  settings.html  station_form.html  stations.html
templates/partials/: footer.html  header.html  home_location_card.html  language_toggle.html  logo.html  station_hero.html  upload.html  viewer.html
tests/: conftest.py  test_admin.py  test_config.py  test_countries.py  test_db.py  test_email.py  test_pages.py  test_phase7.py  test_photos.py  test_routes.py  test_security.py  test_seed.py  test_site_config.py  test_smoke.py  test_storage.py  test_strings.py  test_tokens_sync.py  test_upload.py  test_validation.py  test_viewer.py
